# Ultipugna

./: .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/wrappers/: GenesisPlusGx.cmake  ImGui.cmake  LibAsm.cmake
src/: AppFramework.cpp  AppFramework.h  EmulatorCoreManager.cpp  EmulatorCoreManager.h  Main.cpp  main.cpp
src/CoreWrapper/: GenesisPlusGX.cpp  GenesisPlusGX.h  IEmulatorCore.cpp  IEmulatorCore.h
src/UI/: IWindow.cpp  IWindow.h  LogWindow.cpp  LogWindow.h  MemoryViewerWindow.cpp  MemoryViewerWindow.h  RenderWindow.cpp  RenderWindow.h  ShortcutAndMenuUtils.cpp  ShortcutAndMenuUtils.h  TileViewerWindow.cpp  TileViewerWindow.h  UIManager.cpp  UIManager.h
src/Util/: Config.cpp  Config.h  HashUtil.h  ImGuiMathUtil.h  StringUtil.h
